syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.between.springboot.adapter.in.grpc.proto";

package prices;

import "google/protobuf/timestamp.proto";

service PriceService {
  rpc GetCurrentPrice(GetCurrentPriceRequest) returns (PriceResponse);
}

message GetCurrentPriceRequest {
  uint64 productId = 1;
  uint64 brandId = 2;
  google.protobuf.Timestamp date = 3;
}

// Respuesta con detalles del precio
message PriceResponse {
  uint64 id = 1;
  uint64 brandId = 2;
  google.protobuf.Timestamp startDate = 3;
  google.protobuf.Timestamp endDate = 4;
  uint64 priceList = 5;
  uint64 productId = 6;
  int32 priority = 7;
  double price = 8;
  string curr = 9;
}
